@@ -442,11 +442,10 @@ find_boot:
     jne     .continue
 
 
+.tryToBoot:
     ;
     ; Found boot partition, read boot sector to memory.
     ;
-
-.tryToBoot:
 
     call    loadBootSector
     jne     .continue
@@ -868,13 +867,14 @@ print_nibble:
 ; NULL terminated strings.
 ;
 log_title_str		db  10, 13, 'boot0:', 0
-boot_error_str   	db  'error', 0
 
 gpt_str			db  'GPT', 0
 ;test_str		db  'test', 0
 done_str		db  'done', 0
 
 %endif
+
+boot_error_str   	db  'error', 0
 
 ;--------------------------------------------------------------------------
 ; Pad the rest of the 512 byte sized booter with zeroes. The last
